--- a/scripts/jmeter/user.properties
+++ b/scripts/jmeter/user.properties
@@ -107,7 +107,6 @@ jmeter.reportgenerator.exporter.html.show_controllers_only=true
 # It is used to select which transactions by default will be exported
 #jmeter.reportgenerator.exported_transactions_pattern=[a-zA-Z0-9_\\-{}\\$\\.]*[-_][0-9]*
 
-
 ## Custom graph definition
 #jmeter.reportgenerator.graph.custom_mm_hit.classname=org.apache.jmeter.report.processor.graph.impl.CustomGraphConsumer
 #jmeter.reportgenerator.graph.custom_mm_hit.title=Graph Title
@@ -151,3 +150,4 @@ jmeter.reportgenerator.exporter.html.show_controllers_only=true
 # Set this if you don't want to use SSL for RMI
 #
 #server.rmi.ssl.disable=false
+sampleresult.default.encoding=UTF-8
