--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,26 @@
 {
   "json.schemas": [
     {
+      "url": "./.vscode/schema.json",
       "fileMatch": [
         "bucket/*.json"
-      ],
-      "url": "./.vscode/schema.json"
+      ]
     }
-  ]
+  ],
+  // Configure PSScriptAnalyzer settings
+  "[powershell]": {
+    "editor.formatOnSave": true
+  },
+  "powershell.scriptAnalysis.settingsPath": "PSScriptAnalyzerSettings.psd1",
+  "powershell.codeFormatting.preset": "OTBS",
+  "powershell.codeFormatting.alignPropertyValuePairs": true,
+  "powershell.codeFormatting.ignoreOneLineBlock": true,
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/tmp": true
+  }
 }
