修改配置文件

--- a/scripts/jmeter/user.properties
+++ b/scripts/jmeter/user.properties
@@ -75,6 +75,10 @@
 # Set to 60000 ms by default
 #jmeter.reportgenerator.overall_granularity=60000
 
+# Sets the size of the sliding window used by percentile evaluation.
+# Caution : higher value provides a better accuracy but needs more memory.
+#jmeter.reportgenerator.statistic_window = 20000
+
 # Change this parameter if you want to change the granularity of Response time distribution
 # Set to 100 ms by default
 #jmeter.reportgenerator.graph.responseTimeDistribution.property.set_granularity=100
@@ -101,7 +105,6 @@
 
 # Indicates whether only controller samples are displayed on graphs that support it.
 #jmeter.reportgenerator.exporter.html.show_controllers_only=false
-jmeter.reportgenerator.exporter.html.show_controllers_only=true
 
 # This property is used by menu item "Export transactions for report"
 # It is used to select which transactions by default will be exported
@@ -150,4 +153,14 @@ jmeter.reportgenerator.exporter.html.show_controllers_only=true
 # Set this if you don't want to use SSL for RMI
 #
 #server.rmi.ssl.disable=false
+
+# 自定义jmeter配置
+#language=zh_CN 只在 jmeter.properties 文件中声明才会生效
+CookieManager.save.cookies = true
+jmeter.hidpi.mode=true        #开启视网膜模式
+jmeter.hidpi.scale.factor=1.2 #将图标放大1.2倍
+jmeter.toolbar.icons.size=32x32
+jmeter.tree.icons.size=24x24
+jsyntaxtextarea.font.family=consolas
+jsyntaxtextarea.font.size=18
 sampleresult.default.encoding=UTF-8
