--- a/bucket/AppiumInspector.json
+++ b/bucket/AppiumInspector.json
@@ -21,7 +21,7 @@
     "autoupdate": {
         "architecture": {
             "64bit": {
-                "url": "https://github.com/appium/appium-inspector/releases/download/v$version/Appium-Inspector-windows-$version.zip"
+                "url": "https://github.com/appium/appium-inspector/releases/download/v$version/Appium-Inspector-windows-$version-x64.zip"
             }
         }
     }
