--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     {
       "url": "./.vscode/schema.json",
       "fileMatch": [
-        "bucket/*.json"
+        "bucket/**/*.json"
       ]
     }
   ],
